@@ -606,6 +606,9 @@
             <failOnWarnings>true</failOnWarnings>
             <doclint>-missing</doclint>
             <linksource>true</linksource>
+            <sourceFileExcludes>
+              <sourceFileExclude>module-info.java</sourceFileExclude>
+            </sourceFileExcludes>
             <tags>
               <tag>
                 <name>noinspection</name>
@@ -982,6 +985,16 @@
         <configuration>
           <compilerArgs>
             <arg>-Xpkginfo:always</arg>
+            <arg>--add-reads</arg>
+            <arg>com.puppycrawl.tools.checkstyle=ALL-UNNAMED</arg>
+            <arg>--add-reads</arg>
+            <arg>com.puppycrawl.tools.checkstyle=java.naming</arg>
+            <arg>--add-reads</arg>
+            <arg>com.puppycrawl.tools.checkstyle=java.xml.crypto</arg>
+            <arg>--add-reads</arg>
+            <arg>com.puppycrawl.tools.checkstyle=jdk.security.auth</arg>
+            <arg>--add-exports</arg>
+            <arg>com.google.common/com.google.common.base.internal=com.puppycrawl.tools.checkstyle</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -1779,6 +1792,7 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.5.5</version>
         <configuration>
+          <useModulePath>false</useModulePath>
           <includes>
             <include>com/google/**/*.java</include>
             <include>org/checkstyle/**/*.java</include>
@@ -1833,6 +1847,7 @@
             -XX:+EnableDynamicAgentLoading
             -Xshare:off
           </argLine>
+          <useModulePath>false</useModulePath>
           <additionalClasspathElements>
             <additionalClasspathElement>
               src/test/resources-noncompilable
@@ -1888,9 +1903,21 @@
         </configuration>
         <executions>
           <execution>
+            <id>default-test-jar</id>
             <goals>
               <goal>test-jar</goal>
             </goals>
+            <configuration>
+              <archive>
+                <manifest>
+                  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                  <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                </manifest>
+                <manifestEntries>
+                  <Automatic-Module-Name>${project.groupId}.${project.artifactId}.tests</Automatic-Module-Name>
+                </manifestEntries>
+              </archive>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -5577,6 +5604,32 @@
               <threads>${pitest.plugin.threads}</threads>
               <outputFormats>${pitest.plugin.output.formats}</outputFormats>
             </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>sonatype-oss-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.12.0</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+                <configuration>
+                  <sourceFileExcludes>
+                    <sourceFileExclude>module-info.java</sourceFileExclude>
+                  </sourceFileExcludes>
+                </configuration>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
